interstellar/tests/snapshots/gql_snapshots__parse_create_node_type_empty_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: Tag
    properties: []
