interstellar/tests/snapshots/gql_snapshots__parse_create_vertex_no_properties_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Create:
        patterns:
          - elements:
              - Node:
                  variable: n
                  labels:
                    - Node
                  properties: []
                  where_clause: ~
  foreach_clauses: []
  return_clause: ~
